--- a/debug.css
+++ b/debug.css
@@ -1,3 +1,22 @@
-p {
-  
+nav, ul {
+  border: 1px solid darkgreen;
 }
+​/*
+header, section, footer {
+  width: 100%;
+  min-height: 200px;
+  margin: 10px 0px;
+  background-color: lightgreen;
+}
+​
+section::before {
+  content: "section" attr(class);
+}
+
+header::before {
+  content: "header" attr(class);
+}
+​
+div::before {
+  content: "class:" attr(class);
+}*/
