--- a/desktop.css
+++ b/desktop.css
@@ -44,7 +44,6 @@ header p {
   font-family: 'Open Sans', sans-serif;
   font-size: 16px;
   color: #4A463B;
-  margin-left:132px;
   text-align: right;
 }
 
@@ -80,13 +79,13 @@ nav ul li a:hover {
   border-radius: 5px;
 }
 
-.call_to_action {
+#call_to_action {
  width:auto;
  margin: 0 auto;
  position:relative;
 }
 
-.call_to_action article {
+#call_to_action article {
  line-height: 25px;
  font-family: 'Open Sans', sans-serif;
  width:350px;
@@ -99,7 +98,8 @@ nav ul li a:hover {
  border-radius: 10px;
  padding: 10px;
 }
-#slides img {
+
+.slides img {
   width: 100%;
   height: auto;
 }
@@ -111,23 +111,21 @@ nav ul li a:hover {
  font-family: 'Open Sans', sans-serif;
  color:#fff;
  font-size:18px;
- text-align: right;
 }
 
 #signup p {
  display: inline-flex;
  margin-top:22px;
- width:auto;
+ width:40%;
  position:absolute;
- left:50%;
- margin-left:-450px;
+ margin-left: 20%;
 }
 
 #signup .signup {
  margin-top:15px;
  width:auto;
  position:absolute;
- right:50%;
+ right:45%;
  margin-right:-280px;
 }
 
@@ -159,6 +157,7 @@ input[type=submit] {
  max-width:900px;
  margin:0 auto;
  padding:70px 0 45px 0;
+ overflow: hidden;
 }
 
 #how_we_work h2 {
@@ -193,3 +192,90 @@ input[type=submit] {
  font-family: 'Open Sans', sans-serif;
  margin-left:75px;
 }
+
+#portfolio {
+line-height:25px;
+font-family: 'Open Sans', sans-serif;
+width:auto;
+max-width:900px;
+margin:0 auto;
+}
+
+#portfolio h2 {
+font-size: 20px;
+border-bottom: 1px solid #D6D0C1;
+padding: 20px 0;
+margin-bottom: 20px;
+}
+
+#portfolio .img-item {
+float:left;
+margin-right:25px;
+}
+
+figcaption {
+line-height: 25px;
+font-size:14px;
+width:200px;
+}
+
+figcaption strong {
+border-bottom: 1px solid #D6D0C1;
+padding-bottom:10px;
+margin: 10px 0;
+display:block;
+}
+
+footer {
+position:relative;
+clear:both;
+width:auto;
+height:50px;
+background:#333333;
+}
+
+#copyright {
+background: #1D1D1D;
+height: 0px;
+position:absolute;
+bottom:0;
+left:0;
+width:100%;
+}
+
+#copyright .wrapper {
+font-family: 'Open Sans', sans-serif;
+padding-top:25px;
+color: #5e5e5e;
+font-size:14px;
+position:relative;
+max-width:900px;
+margin: 0 auto;
+}
+
+#copyright .wrapper .social {
+position:absolute;
+right:0;
+top:25px;
+}
+
+#copyright .wrapper .social a {
+transition: opacity .25s ease;
+opacity: 0.3;
+margin-left: 12px;
+display:block;
+float:left;
+}
+
+#copyright .wrapper .social a:hover {
+opacity: 0.7;
+}
+
+#copyright .wrapper a {
+color: #ABABAB;
+}
+
+#copyright .wrapper a:hover {
+color: #fff;
+}
+
