--- a/desktop.css
+++ b/desktop.css
@@ -1,94 +1,116 @@
-.hidden {
-  position: absolute;
-  clip: rect(1px, 1px, 1px, 1px);
+/*Layout for min-width 1357px*/
 
-}
 body {
-  border-top: 5px solid #e56038;
-  background: #ebe8de;
-  font-family: 'Open Sans', sans-serif;
-  color: #333333;
+ background-color: #b7ddd9;	
+}
+.hidden {
+ position: absolute;
+ clip: rect(1px, 1px, 1px, 1px);
 }
 
 p {
-  margin: 5px 0;
-  line-height: 25px;
-}
-
-a {
-  text-decoration: none;
-  color: inherit;
-  transition: color .5s ease;
-}
-
-strong {
-  font-weight: bold;
+ line-height: 25px;
 }
 
 header {
-  position:relative;
-  width:auto;
-  max-width:900px;
-  margin: 0 auto 20px auto;
+ width: auto;
+ height: auto;
+ background-color: #b7ddd9;
+}
+
+header .greeting, header .logo {
+ display: inline-block;
+}
+
+header .greeting {
+ width: 78%;
+ padding: 0 0 0 3%;
+}
+
+header .logo {
+ width: 15%;
+ height: auto;
+ padding: 2% 0 0 3%;
+}
+
+header .logo img {
+ width: auto;
+ height: auto;
 }
 
 header h1 {
-  margin: 35px 0 0 0;
-  font-size: 55px;
-  color: #e56038;
-  font-family: 'Ubuntu', cursive;
-  text-align: center;
+ font-size: 56px;
+ color: #9f3e0a;
+ font-family: 'Georgia', serif;
+ padding: 30px 0 0 30px;
+}
+
+div .questions {
+ padding-left:50px;
 }
 
 header p {
-  font-family: 'Open Sans', sans-serif;
-  font-size: 16px;
-  color: #4A463B;
-  text-align: right;
+ font-family: 'Verdana', cursive;
+ font-size: 18px;
+ font-style: italic;
+ color: #4A463B;
+ margin: 15px auto;
+}
+
+.greeting p:first-of-type {
+ margin-left: 200px;
+} 
+
+.greeting p:last-of-type {
+ margin-left: 250px;
 }
 
 nav {
-  width: 80%;
-  margin: 0 auto;
+ width: 100%;
+ background-color: #b7ddd9;
+ border-bottom: 2px solid black;
 }
 
 nav ul {
-  list-style:none;
-  width: 60%;
-  margin: 2% auto;
-
+ list-style:none;
+ width: 84%;
+ margin: auto;
 }
 
 nav ul li {
-  width: 19%;
-  display:inline-block;
-  text-align: justify;
-  margin: 2% 2%;
+ width: 24%;
+ display:inline-block;
+ text-align: center;
+ margin: 1% auto;
 }
 
 nav ul li a {
-  padding: 3px 15px;
-  font-family: 'Open Sans', sans-serif;
-  text-transform: uppercase;
-  transition: all .25s ease;
+ padding: 3px 15px;
+ font-family: 'Open Sans', sans-serif;
+ font-weight: bold;
+ text-transform: uppercase;
+ transition: all .25s ease;
+ text-decoration: none;
+ color: #9f3e0a;
 }
 
 nav ul li a:hover {
-  color: #E56038;
-  background-color: RGBA(255,255,255,0.5);
-  border-radius: 5px;
+ background-color: RGBA(255,255,255,0.5);
+ border-radius: 5px;
 }
 
 #call_to_action {
  width:auto;
  margin: 0 auto;
  position:relative;
+ background-color: #19ab92;
 }
 
 #call_to_action article {
- line-height: 25px;
+ line-height: 35px;
  font-family: 'Open Sans', sans-serif;
- width:350px;
+ font-size: 18px;
+ width:400px;
  position:absolute;
  top:15%;
  left:15%;
@@ -96,37 +118,40 @@ nav ul li a:hover {
  z-index:11;
  background-color: RGBA(255,255,255,0.7);
  border-radius: 10px;
- padding: 10px;
+ padding: 15px;
 }
 
 .slides img {
   width: 100%;
-  height: auto;
+  height: 330px;
 }
 
 #signup {
  width:auto;
  height:70px;
- background-color:#e56038 ;
+ background-color:#19ab92;
  font-family: 'Open Sans', sans-serif;
  color:#fff;
- font-size:18px;
 }
 
-#signup p {
- display: inline-flex;
- margin-top:22px;
- width:40%;
- position:absolute;
- margin-left: 20%;
+#signup .signup_call, #signup .signup_form {
+ display: inline-block;
 }
 
-#signup .signup {
+#signup .signup_call {
+ width: 50%;
+ height: auto;
+}
+
+#signup .signup_call p {
+ font-size: 18px;
+ text-align: right;
+ padding-right: 5%;
+}
+
+#signup .signup_form {
  margin-top:15px;
- width:auto;
- position:absolute;
- right:45%;
- margin-right:-280px;
+ width:45%;
 }
 
 input {
@@ -153,34 +178,33 @@ input[type=submit] {
 }
 
 #how_we_work {
- width:auto;
- max-width:900px;
+ width:69.5%;
  margin:0 auto;
- padding:70px 0 45px 0;
+ padding:15px 0 45px 0;
  overflow: hidden;
 }
 
 #how_we_work h2 {
- margin: 35px 0 35px 0;
+ margin: 15px 0 35px 0;
  font-size: 36px;
- color: #e56038 ;
+ color: #9f3e0a;
  font-family: sans-serif;
  text-align: center;
- border-bottom: 2px solid #e56038 ;
+ border-bottom: 2px solid #9f3e0a;
 }
 
 #how_we_work article {
  float:left;
- width:250px;
- margin-right:45px;
+ width:27.5%;
+ margin: 0 2.5% 0 2.5%;
  font-size:14px;
 }
 
 #how_we_work article h3 {
  font-family: 'Open Sans', sans-serif;
- font-size:20px;
- margin-bottom:10px;
- margin-left:75px;
+ font-size: 20px;
+ margin-bottom: 10px;
+ margin-left: 75px;
 }
 
 #how_we_work article img {
@@ -188,94 +212,165 @@ input[type=submit] {
 }
 
 #how_we_work article p {
- line-height:25px;
+ line-height: 25px;
  font-family: 'Open Sans', sans-serif;
- margin-left:75px;
+ margin-left: 75px;
 }
 
 #portfolio {
-line-height:25px;
-font-family: 'Open Sans', sans-serif;
-width:auto;
-max-width:900px;
-margin:0 auto;
+ line-height:25px;
+ font-family: 'Open Sans', sans-serif;
+ width: 69.5%;
+ margin:0 auto;
 }
 
 #portfolio h2 {
-font-size: 20px;
-border-bottom: 1px solid #D6D0C1;
-padding: 20px 0;
-margin-bottom: 20px;
+ font-size: 36px;
+ color: #9f3e0a;
+ text-align: center;
+ border-bottom: 2px solid #9f3e0a;
+ margin: 15px 0 35px 0;
+ padding-bottom: 5px;
 }
 
 #portfolio .img-item {
-float:left;
-margin-right:25px;
+ float:left;
+ margin: 0 20.5px 0 20.5px;
 }
+
+#portfolio .img-item:first-of-type {
+ margin-left: 0;
+}
+
+#portfolio .img-item:last-of-type {
+ margin-right: 0;
+} 
 
 figcaption {
-line-height: 25px;
-font-size:14px;
-width:200px;
-}
-
-figcaption strong {
-border-bottom: 1px solid #D6D0C1;
-padding-bottom:10px;
-margin: 10px 0;
-display:block;
+ line-height: 25px;
+ font-size:16px;
+ width:200px;
 }
 
 footer {
-position:relative;
-clear:both;
-width:auto;
-height:50px;
-background:#333333;
+ clear: both;
+ width:auto;
+ height:auto;
+ background-color: #333333;
 }
 
-#copyright {
-background: #1D1D1D;
-height: 0px;
-position:absolute;
-bottom:0;
-left:0;
-width:100%;
+div.wrapper {
+ width: 69.5%;
+ margin: 0 auto;
+ padding: 0;
 }
 
-#copyright .wrapper {
-font-family: 'Open Sans', sans-serif;
-padding-top:25px;
-color: #5e5e5e;
-font-size:14px;
-position:relative;
-max-width:900px;
-margin: 0 auto;
+div.contacts, div.social {
+ display: inline-block;
+ vertical-align: top;
 }
 
-#copyright .wrapper .social {
-position:absolute;
-right:0;
-top:25px;
+div.contacts {
+ width: 65%;
+ height: auto;
+ 
 }
 
-#copyright .wrapper .social a {
-transition: opacity .25s ease;
-opacity: 0.3;
-margin-left: 12px;
-display:block;
-float:left;
+div.social {
+ width: 34%;
+ height: auto;
+
 }
 
-#copyright .wrapper .social a:hover {
-opacity: 0.7;
+.contacts p, .social p {
+ font-family: 'Open Sans', sans-serif;
+ color: #FFFFFF;
+ font-size: 16px;
+ padding: 5px 0 0 0;
 }
 
-#copyright .wrapper a {
-color: #ABABAB;
+.social p {
+ text-align: right;
+ padding-bottom: 15px;
 }
 
-#copyright .wrapper a:hover {
-color: #fff;
+.social img {
+ margin-right: 10px;
+ float: right;
+}	
+
+/*Layout for max-width 1356px*/
+
+@media screen and (max-width: 1356px) {
+#how_we_work article {
+ width: 44%;
+ margin: 0 2.5% 0 2.5%;
+ font-size: 14px;
+ 
 }
+
+#how_we_work article:last-of-type {
+ float: none;
+ margin: 0 auto 0 auto;	
+}
+
+#portfolio article .img-item {
+ float: left;
+ width: 30%;
+ margin: 0 0 15px 15%;
+ 
+}
+ #portfolio .img-item:first-of-type {
+ margin-left: 15%;
+}
+
+#portfolio .img-item:last-of-type {
+ margin-left: 15%;
+}
+}
+
+/*Layout for max-width 855px*/
+@media screen and (max-width: 855px) {
+	
+header h1 {
+ font-size: 40px;
+ padding: 30px 0 0 15%;
+}	
+
+header p {
+ font-size: 14px;
+ color: #4A463B;
+ margin: 15px 0 15px 10%;
+}
+
+.greeting p:first-of-type {
+ margin-left: 30%;
+} 
+
+.greeting p:last-of-type {
+ margin-left: 35%;
+}
+
+#signup {
+ width:auto;
+ height: auto;
+}
+
+#signup .signup_call, signup_form {
+ display: block;
+ width: 100%;
+ padding: 0;
+ margin: 0;
+}
+
+#signup .signup_call p {
+ font-size: 16px;
+ text-align: center;
+}
+
+#signup .signup_form {
+ margin-left: 28%;
+ padding-bottom: 10px;
+}
+
 
